--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.10"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.4.0",
+    "url-loader": "^4.1.0"
   }
 }
