--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reach/router": "^1.3.4",
     "next": "9.3.5",
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "^5.2.0",
     "sass": "^1.26.10"
   },
   "devDependencies": {
