--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
+    "axios": "^0.19.2",
     "next": "9.3.5",
     "prettier": "^2.0.5",
     "react": "16.13.1",
